# ammps_config_generator

./: .gitignore  README.md  ggshark_test_run.py  ggshark_test_run2.py  make_ggshark_config.py  make_lucas_shark_config.py  make_single_config.py  make_small_config.py  setup.cfg
acg/baseconfiguration/: base_agent_configuration.py  basic_trader_test_configuration.py  cascade_sim_configuration.py  new_agent_configuration.py  portfolio_test_sim_configuration.py
acg/simulations/: cascade_test_sim.xlsx  make_basic_trader_test_config.py  make_cascade_sim_config.py  make_cascade_sim_configs.py  make_ggshark_config.py  make_lucas_shark_config.py  make_market_maker_test_config.py  make_new_market_config.py  make_portfolio_trader_test_config.py  make_single_config.py  make_small_config.py  make_test_market_sharkfin_config.py  new_market_config
baseconfiguration/: base_agent_configuration.py
configgenerator/: agent_configuration.py  configuration_generator.py
configurations/run290/: make_run290.py
scripts/: startsim.sh  startsim_with_simulated_rpc.sh
simulations/: make_ggshark_config.py  make_lucas_shark_config.py  make_single_config.py  make_small_config.py
