[metadata]
name = acg
version = 0.0.5
author = Nicholas Skar-Gislinge
author_email = mesalasnano@gmail.com
description = Generate configurations for ammps simulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mesalas/ammps_config_generator
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pandas
    numpy
    xlsxwriter